[tool.poetry]
name = "ast_selector"
version = "0.1.4"
description = "Query AST elements by using CSS Selector-like syntax"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
keywords = ["ast"]
readme = "README.md"
homepage = "https://github.com/guilatrova/ast_selector"
repository = "https://github.com/guilatrova/ast_selector"
include = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [
    { include = "ast_selector", from = "src" },
]

[tool.poetry.urls]
"Changelog" = "https://github.com/guilatrova/ast_selector/blob/main/CHANGELOG.md"

[tool.semantic_release]
version_variable = [
    "src/ast_selector/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}"
]
major_on_zero = false
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
isort = "^5.10.1"
mypy = "^0.950"
tryceratops = "^1.1.0"
pre-commit = "^2.18.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
extra_standard_library = ["pytest"]

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "src/tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
